--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,17 @@ backend/__pycache__/
 *.png
 *.txt
 .DS_Store
+
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
