--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,32 @@
-asn1crypto==0.24.0
-certifi==2018.8.24
-cffi==1.11.5
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
-cryptography==2.3.1
+defusedxml==0.5.0
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==2.1
+django-heroku==0.3.1
 Flask==1.0.2
 gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+Markdown==2.6.11
 MarkupSafe==1.0
-pycparser==2.18
-pyOpenSSL==18.0.0
-PySocks==1.6.8
-requests==2.19.1
+oauthlib==2.1.0
+Pillow==5.2.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+PyJWT==1.6.4
+python3-openid==3.1.0
+pytz==2018.5
+requests==2.21.0
+requests-oauthlib==1.0.0
 six==1.11.0
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
+static3==0.7.0
 urllib3==1.23
 Werkzeug==0.14.1
-win-inet-pton==1.0.1
+whitenoise==4.0
 wincertstore==0.2
